# DiffusionSR

./: .gitignore  README.md  pyproject.toml
ldm/: __init__.py
ldm/models/: __init__.py
ldm/modules/: __init__.py
ldm/modules/vqvae/: __init__.py
src/: autoencoder.py  config.py  data.py  ema.py  metrics.py  model.py  realesrgan.py  testing.py  train.py  trainer.py
src/wandb/: latest-run
src/wandb/run-20251117_133806-nw2qhx4v/: run-nw2qhx4v.wandb
src/wandb/run-20251117_133806-nw2qhx4v/files/: config.yaml  wandb-metadata.json
src/wandb/run-20251117_133811-3ol0ykbr/: run-3ol0ykbr.wandb
src/wandb/run-20251117_133811-3ol0ykbr/files/: config.yaml  wandb-metadata.json
src/wandb/run-20251117_133811-ef7tp451/: run-ef7tp451.wandb
src/wandb/run-20251117_133811-ef7tp451/files/: config.yaml  wandb-metadata.json
src/wandb/run-20251117_133811-s3bj81ff/: run-s3bj81ff.wandb
src/wandb/run-20251117_133811-s3bj81ff/files/: config.yaml  wandb-metadata.json
src/wandb/run-20251117_133811-ss6g89yl/: run-ss6g89yl.wandb
src/wandb/run-20251117_133811-ss6g89yl/files/: config.yaml  wandb-metadata.json
src/wandb/run-20251117_133911-gl3wnt34/: run-gl3wnt34.wandb
src/wandb/run-20251117_133911-gl3wnt34/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/wandb/run-20251117_145241-76oxm8v5/: run-76oxm8v5.wandb
src/wandb/run-20251117_145241-76oxm8v5/files/: config.yaml  (+1 more)
src/wandb/run-20251117_145746-utahtaob/: run-utahtaob.wandb
src/wandb/run-20251117_150909-rhzp9fke/: run-rhzp9fke.wandb
src/wandb/run-20251117_152625-9qlb7i3k/: run-9qlb7i3k.wandb
(+7 files in other folders)
